<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFEEEEEE"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:layout_marginBottom="8dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"

        />

    <TextView
        android:id="@+id/noteRowTitle"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/peekText"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        android:textColor="#151515"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTime" />

    <TextView
        android:id="@+id/dateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/datetime"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/noteRowTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>